# triton-vsi-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
backend/: compiler.py  driver.c  driver.py
backend/language/vsi/: libdevice.py
examples/inductor/: simple.py
examples/triton_kernel/: elementwise_binary.py  matmul.py
src/triton_vsi_backend/: __init__.py
src/triton_vsi_backend/_dynamo/: __init__.py  device_interface.py
src/triton_vsi_backend/_inductor/: __init__.py
src/triton_vsi_backend/_inductor/codegen/: __init__.py  device_op_overrides.py
src/triton_vsi_backend/_inductor/kernel/: __init__.py  mm_common.py
src/triton_vsi_backend/backend/: __init__.py  compiler.py  driver.c  driver.py
src/triton_vsi_backend/backend/include/: npy.hpp
src/triton_vsi_backend/language/vsi/: __init__.py
